--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,38 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                
+                        
+    
+    
     
     
     <wb-module deploy-name="lhs">
-                                
-        
-        
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                
-        
-        
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-                                
-        
-        
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                
-        
-        
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources-local"/>
-                                
-        
-        
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources-common"/>
-                                
+        <wb-resource deploy-path="/" source-path="/WebContent/WEB-INF/config"/>
+                                                
+        
+        
         
         
         <property name="java-output-path" value="/Smarty_lhs/build/classes"/>
-        <property name="context-root" value="pf"/>
-                            
+                
+        <property name="context-root" value="lhs"/>
+                                            
+    
+    
     
     
     </wb-module>
-            
+                    
+
+
 
 
 </project-modules>
