--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,48 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                
+                        
     
     
-    <wb-module deploy-name="ROOT">
-                                
+    
+    
+    <wb-module deploy-name="whdud">
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/" source-path="/WebContext"/>
-                                
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-                                
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-                                
+                                                
+        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+                        
+        
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources-common"/>
-                                
+                                                
+        
+        
         
         
         <property name="java-output-path" value="/77_SpringJdbc/build/classes"/>
-        <property name="context-root" value="ROOT"/>
-                            
+        <property name="context-root" value="whdud"/>
+                                            
+    
+    
     
     
     </wb-module>
-            
+                    
+
+
 
 
 </project-modules>
